fix: Исправлен парсер JSON.